<resources>
    <string name="app_name">studenTeacher</string>
    <string-array name="אזור">
        <item>צפון</item>
        <item>מרכז</item>
        <item>יהודה ושומרון</item>
        <item>דרום</item>
    </string-array>

    <string name="image_contentDescription">image</string>

    <string name="let_s_get_started_text">Let\'s Get started</string>

    <string name="intro_text_description">Students - Get Ready for Success! Find the perfect tutor to match your needs! Custom service, tutors tailored for you.</string>

    <string name="sign_in">SIGN IN</string>
    <string name="phone">Phone</string>
    <string name="age">Age</string>
    <string name="ageCard">Age:</string>


    <string name="price">Price</string>
    <string name="priceCard">Price:</string>
    <string name="mobileCard">Mobile:</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="sign_up">SIGN UP</string>

    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>


    <string name="name">Name</string>
    <string name="nameCard">Name:</string>

    <string name="password">Password</string>

    <string name="email">Email</string>

    <string name="sign_in_description_text">Enter your name, email id and password, to register with us.</string>

    <string name="please_wait">Please Wait…</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>

    <string name="nav_my_profile">My Profile</string>

    <string name="nav_sign_out">Sign Out</string>
    <string name="message">My Message</string>

    <string name="delete_user">Delete Account</string>

    <string name="mobile">Mobile</string>

    <string name="gender">Gender</string>

    <string name="zoom">Zoom</string>

    <string name="area">Area</string>
    <string name="search">Search</string>
    <string name="search_profession">Search profession</string>

    <string name="proff1">Profession1</string>
    <string name="proff">Professions</string>
    <string name="proff2">Profession2</string>
    <string name="proff3">Profession3</string>

    <string name="update">UPDATE</string>

    <string name="my_profile_title">My Profile</string>

</resources>