<?xml version="1.0" encoding="UTF-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:orientation="vertical"
    tools:context=".activities.SignUpActivity">

    <!--END-->

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_sign_up_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/sign_up"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/authentication_screen_content_marginTop"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
            android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
            android:gravity="center"
            android:text="@string/sign_up_description_text"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/authentication_description_text_size" />



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
            android:layout_marginTop="@dimen/authentication_screen_card_view_marginTop"
            android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
            android:elevation="@dimen/card_view_elevation"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_view_layout_content_padding">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_name_signUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/et_text_size" />

                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_email_signUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/et_text_size" />

                </com.google.android.material.textfield.TextInputLayout>




                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_password_signUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_confirm_password_signUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="אימות סיסמא"
                        android:inputType="textPassword"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_mobile_signUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="מספר טלפון"
                        android:inputType="phone"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

<!--                <com.google.android.material.textfield.TextInputLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"-->
<!--                    android:layout_marginTop="@dimen/authentication_screen_til_marginTop"-->
<!--                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">-->

<!--                    <androidx.appcompat.widget.AppCompatEditText-->
<!--                        android:id="@+id/et_numOfClasses"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:hint="if you want to teach- how many subjects do you teach?"-->
<!--                        android:inputType="number"-->
<!--                        android:textSize="16sp" />-->


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                        android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                        android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_prof1_signUp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="first subject"
                            android:textSize="16sp" />
<!--                    </com.google.android.material.textfield.TextInputLayout>-->





                    <!--                <com.google.android.material.textfield.TextInputLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"-->
<!--                    android:layout_marginTop="@dimen/authentication_screen_til_marginTop"-->
<!--                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">-->

<!--                    <androidx.appcompat.widget.AppCompatEditText-->
<!--                        android:id="@+id/et_prof1"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:hint="נושא שאני רוצה ללמד"-->
<!--                        android:textSize="16sp" />-->
<!--                    </com.google.android.material.textfield.TextInputLayout>-->

<!--                <com.google.android.material.textfield.TextInputLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"-->
<!--                    android:layout_marginTop="@dimen/authentication_screen_til_marginTop"-->
<!--                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">-->

<!--                    <androidx.appcompat.widget.AppCompatEditText-->
<!--                        android:id="@+id/et_prof2"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:hint="נושא שאני רוצה ללמד"-->
<!--                        android:textSize="16sp" />-->
<!--                </com.google.android.material.textfield.TextInputLayout>-->


<!--                <com.google.android.material.textfield.TextInputLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"-->
<!--                    android:layout_marginTop="@dimen/authentication_screen_til_marginTop"-->
<!--                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">-->

<!--                    <androidx.appcompat.widget.AppCompatEditText-->
<!--                        android:id="@+id/et_prof3"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:hint="נושא שאני רוצה ללמד"-->
<!--                        android:textSize="16sp" />-->

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spn_area_R"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="0dp"
                        android:background="@drawable/custom_background"
                        android:spinnerMode="dropdown"
                        app:boxBackgroundColor="@color/colorAccent" />
                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spn_gender"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="0dp"
                        android:background="@drawable/custom_background"
                        android:spinnerMode="dropdown"
                        app:boxBackgroundColor="@color/colorAccent" />


                </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >
                <EditText
                    android:id="@+id/et_how_many_classes"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="How many classes you want to teach?">

                    <requestFocus />
                </EditText>


                <Button
                    android:id="@+id/btn_teach_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="you want to teach?-click here" />

            </LinearLayout>
                <Button
                    android:id="@+id/btn_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/btn_marginStartEnd"
                    android:layout_marginTop="@dimen/sign_up_screen_btn_marginTop"
                    android:layout_marginEnd="@dimen/btn_marginStartEnd"
                    android:background="@drawable/shape_button_rounded"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingTop="@dimen/btn_paddingTopBottom"
                    android:paddingBottom="@dimen/btn_paddingTopBottom"
                    android:text="@string/sign_up"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/btn_text_size" />


<!--                <Button-->
<!--                    android:id="@+id/btn_i_want_teach"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:layout_marginStart="@dimen/btn_marginStartEnd"-->
<!--                    android:layout_marginTop="@dimen/sign_up_screen_btn_marginTop"-->
<!--                    android:layout_marginEnd="@dimen/btn_marginStartEnd"-->
<!--                    android:background="@drawable/shape_button_rounded"-->
<!--                    android:foreground="?attr/selectableItemBackground"-->
<!--                    android:gravity="center"-->
<!--                    android:paddingTop="@dimen/btn_paddingTopBottom"-->
<!--                    android:paddingBottom="@dimen/btn_paddingTopBottom"-->
<!--                    android:text="teach"-->
<!--                    android:textColor="@android:color/white"-->
<!--                    android:textSize="@dimen/btn_text_size" />-->
<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:id="@+id/holder"-->
<!--                    android:orientation="vertical">-->
<!--                </LinearLayout>-->

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>
</ScrollView>